[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Soldier.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Error.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Selected.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.4508, 32.2276 )

[sub_resource type="CircleShape2D" id=2]
radius = 703.553

[sub_resource type="CircleShape2D" id=3]
radius = 703.428

[sub_resource type="CircleShape2D" id=4]
radius = 377.824

[node name="Soldier" type="KinematicBody2D" groups=[
"soldier",
"unit",
]]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SelectButton" type="Button" parent="."]
margin_left = -31.9052
margin_top = -31.5468
margin_right = 33.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 2 )

[node name="ShootRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRadius"]
shape = SubResource( 3 )

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FireDelay" type="Timer" parent="."]

[node name="FightingRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FightingRange"]
shape = SubResource( 4 )
[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="body_entered" from="ShootRadius" to="." method="_on_ShootRadius_body_entered"]
[connection signal="timeout" from="FireDelay" to="." method="_on_FireDelay_timeout"]
[connection signal="body_entered" from="FightingRange" to="." method="_on_FightingRange_body_entered"]
[connection signal="body_exited" from="FightingRange" to="." method="_on_FightingRange_body_exited"]
